--- a/contact/contact.html
+++ b/contact/contact.html
@@ -12,7 +12,7 @@
     
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <script src="../script.js" defer></script>
-    <title>O stronie</title>
+    <title>Informacje kontaktowe</title>
 </head>
 <body>
     <header>
@@ -37,8 +37,8 @@
             <li><a href="../index.html#sauce">Sos</a></li>
             <li><a href="../index.html#recipies">Przepisy</a></li>
             <li><a href="../index.html#tips">Wskazówki</a></li>
-            <li><a href="#">O stronie</a></li>
-            <li><a href="../contact/contact.html">Kontakt</a></li>
+            <li><a href="../about/about.html">O stronie</a></li>
+            <li><a href="#">Kontakt</a></li>
           </ul>
         </div>
       </nav>
