--- a/contact/contact.html
+++ b/contact/contact.html
@@ -54,7 +54,7 @@
         <div class="container">
 
           <img class="PhotoProfile"
-            src="https://media.licdn.com/dms/image/C4E03AQHTql3A9FOpPw/profile-displayphoto-shrink_400_400/0/1652632735991?e=1685577600&v=beta&t=DAcOzBiRAlHPOC1fK7k7TvxG-y8G8-xT6aLLuA4h_Jo"
+            src="../images/ProfilePhoto.jfif"
             alt="Nazwa uczelni w stylu Mario">
 
           <div class="description">
